--- a/docs/插件/基础插件/CMI/概览.md
+++ b/docs/插件/基础插件/CMI/概览.md
@@ -4,4 +4,40 @@ sidebar_position: 1
 
 # 概览
 
-CMI屎山插件，谁愿意写谁写
+:::info
+
+`spigotmc` :https://www.spigotmc.org/resources/cmi-298-commands-insane-kits-portals-essentials-economy-mysql-sqlite-much-more.3742/
+
+`cmilib前置` :https://www.spigotmc.org/resources/cmilib.87610/
+
+`wiki` :https://www.zrips.net/cmi
+
+`Github` :https://github.com/Zrips/CMI/
+
+:::
+
+要使 CMI 经济正常工作，您需要以下两种解决方案之一：
+1.使用来自CMI的重新编译的 Vault 版本，该版本直接支持 CMI 经济，并且与其他插件具有最佳兼容性。
+2. 使用CMI的经济注入器，它将为任何Vault构建添加CMI经济支持。
+这两种方法都是有效的，但第二种方法可能会遇到插件的小问题，这些插件往往会在 Vault 加载后和注入器本身之前直接加载。
+P.S. 不要忘记在配置文件中启用经济。
+
+:::info
+
+`重新编译的vault`: https://www.zrips.net/wp-content/uploads/2020/07/Vault-1.7.3.jar
+
+`经济注入器`: https://www.zrips.net/wp-content/uploads/2020/07/CMIEInjector1.0.2.3.jar
+:::
+
+关于CMI聊天重复问题解决
+`plugins\CMI\Settings\chat.yml`
+将下面两个都改成false
+:::info
+
+`个人建议使用其他聊天插件` 
+
+:::
+```
+ModifyChatFormat: false
+ClickHoverMessages: false
+```
